Fix sticky navbar and footer on mobiles

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,23 +1,20 @@
 @import "../styles/variables";
 
-:host {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
+$footer-height: 60px;
 
-  .content-wrapper {
-    flex: 1;
-    overflow-y: auto;
-  }
-
-  liow-navbar, footer {
-    flex: 0;
-  }
+.content-wrapper {
+  padding-top: $navbar-height;
+  padding-bottom: $footer-height;
 }
 
 footer {
-  height: 60px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: $footer-height;
   border-top: 1px solid $gray-border;
+  background: $body-bg;
 
   > .container {
     padding: 15px;
